--- a/web-gateway/src/main/assets/stylesheets/petStore.css
+++ b/web-gateway/src/main/assets/stylesheets/petStore.css
@@ -64,6 +64,7 @@ ul li.checked::before {
 
 /* Style the close button */
 .close {
+    border: none;
     position: absolute;
     right: 0;
     top: 0;
@@ -91,7 +92,7 @@ ul li.checked::before {
 }
 
 /* Style the input */
-input {
+input[type=text] {
     border: none;
     width: 75%;
     padding: 10px;
@@ -101,6 +102,7 @@ input {
 
 /* Style the "Add" button */
 .addBtn {
+    border: none;
     padding: 10px;
     width: 25%;
     background: #d9d9d9;
